--- a/static/style.css
+++ b/static/style.css
@@ -7,7 +7,7 @@ body {
 
 .container {
     display: flex;
-    height: 100vh;
+    min-height: 100vh;
 }
 
 .sidebar {
@@ -141,7 +141,7 @@ body {
 }
 
 .leaderboard-table th {
-    background-color: #f9f9f9;
+    background-color: #f1f1f1;
     font-weight: 600;
     color: #34495e;
     text-transform: uppercase;
@@ -151,3 +151,32 @@ body {
 .leaderboard-table tr:hover {
     background-color: #f5f5f5;
 }
+
+.leaderboard-table tr:nth-child(even) {
+    background-color: #fbfbfb;;
+}
+
+/* Or - 1ère place */
+.leaderboard-table tr:nth-child(1) {
+    background: linear-gradient(145deg, #f9f295, #d4af37);
+    color: #3e3000;
+    font-weight: bold;
+    box-shadow: inset 0 0 5px rgba(255, 255, 200, 0.6), 0 2px 6px rgba(0, 0, 0, 0.2);
+}
+
+/* Argent - 2e place */
+.leaderboard-table tr:nth-child(2) {
+    background: linear-gradient(145deg, #e0e0e0, #a9a9a9);
+    color: #2c2c2c;
+    font-weight: bold;
+    box-shadow: inset 0 0 5px rgba(255, 255, 255, 0.5), 0 2px 6px rgba(0, 0, 0, 0.2);
+}
+
+/* Bronze - 3e place */
+.leaderboard-table tr:nth-child(3) {
+    background: linear-gradient(145deg, #cd7f32, #a97142);
+    color: #2c1a00;
+    font-weight: bold;
+    box-shadow: inset 0 0 5px rgba(255, 200, 150, 0.4), 0 2px 6px rgba(0, 0, 0, 0.2);
+}
+
