--- a/templates/leaderboard_global.html
+++ b/templates/leaderboard_global.html
@@ -3,7 +3,7 @@
 {% block title %}Leaderboard{% endblock %}
 {% block content %}
 <div class="leaderboard-container">
-    <h1 class="leaderboard-title">🏆 MascuLead : Gendered Bias Leaderboard</h1>
+    <h1 class="leaderboard-title">🏆 MascuLead : Global Gendered Bias Leaderboard</h1>
     <p>*GG is Gender Gap </p>
 
     <div class="leaderboard-card">
