--- a/templates/upload.html
+++ b/templates/upload.html
@@ -53,7 +53,7 @@
                             <p>Gender Shift : <strong>{{ gender_shift }}%</strong></p>
                         {% endif %}
                         {% if leaderboard %}
-                            <p class="mb-0">🎉 Your results has been add in the leaderboard</p>
+                            <p class="mb-0">🎉 Your results have been added to the leaderboard</p>
                         {% endif %}
                     </div>
                     {% endif %}
