v1 du site fini

--- a/templates/home.html
+++ b/templates/home.html
@@ -14,7 +14,7 @@
             <div class="card">
                 <h3>1st Step : Let's Start</h3>
                 <p>
-                    Go on https://github.com/FannyDucel/GenderBiasCoverLetter and download repository.
+                    Go on <a href=https://github.com/FannyDucel/GenderBiasCoverLetter target="_blank">https://github.com/FannyDucel/GenderBiasCoverLetter </a> and download repository.
                 </p>
             </div>
             <div class="card">
