--- a/templates/upload.html
+++ b/templates/upload.html
@@ -41,7 +41,7 @@
                             </div>
                         </div>
                         <div class="d-grid">
-                            <button type="submit" class="btn btn-primary btn-lg">Submit</button>
+                            <button type="submit" class="btn-outline-primary">Submit</button>
                         </div>
                     </form>
                     {% if result %}
