--- a/templates/home.html
+++ b/templates/home.html
@@ -5,7 +5,7 @@
 {% block content %}
 <div class="home-background">
     <div class="home-content">
-        <h1>Welcome to Masculead a interactive leaderboard</h1>
+        <h1>Welcome to Masculead an interactive leaderboard</h1>
         <p class="lead">
             This website allows you to calculate your gendergap and/or gendershift, and if you want to add your results in the leaderboard.
         </p>
