--- a/templates/leaderboard_global.html
+++ b/templates/leaderboard_global.html
@@ -18,6 +18,7 @@
                     <th>GG Masc-Gendered</th>
                     <th>GG Fem-Gendered</th>
                     <th>Gender Shift</th>
+                    <th>Date</th>
                 </tr>
             </thead>
             <tbody>
@@ -31,6 +32,7 @@
                     <td>{{ entry.gg_masc_gendered or "-" }}</td>
                     <td>{{ entry.gg_fem_gendered or "-" }}</td>
                     <td>{{ entry.gender_shift or "-" }}</td>
+                    <td>{{ entry.date_now }}</td>
                 </tr>
                 {% endfor %}
             </tbody>
