fixed typos and added doc

--- a/templates/about.html
+++ b/templates/about.html
@@ -19,7 +19,11 @@
         {% endfor %}
     </div>
     <div class="card">
-        <h3>Si on veut ajouter un petit message</h3>
-        <p>A voir </p>
+        <h3>Context of the project</h3>
+        <p>This website is a demonstration of the <a href="https://inria.hal.science/hal-04803403">"You'll be a nurse, my son!" paper</a> written by Fanny Ducel, Aurélie Névéol and Karën Fort.
+        It aims at evaluating gender biases in French (and Italian, and can be extended to other inflected languages) for the use-case of cover letter generation. </p>
+        <p>More generally, this article and associated tool are part of Fanny Ducel's PhD thesis on bias evaluation in autoregressive language models, which is directed by Karën Fort and Aurélie Névéol at Université Paris-Saclay. <br>
+            This thesis is associated with <a href="https://anr-inextenso.loria.fr/">InExtenso</a>, an ANR project in partnership with CHU Rouen, LISN and LORIA. </p>
+        <p> This website, as well as the leaderboards, were developed by Jeffrey André in the context of an internship.</p>
     </div>
 {% endblock %}
