--- a/templates/base.html
+++ b/templates/base.html
@@ -14,7 +14,7 @@
                 <a href="/"><img src="{{ url_for('static', filename='logo_loria.png') }}" alt="Logo"></a>
             </div>
             <nav class="nav-links">
-                <a href="/">Accueil</a>
+                <a href="/">Home</a>
                 <div class="dropdown">
                     <button class="dropbtn">Leaderboard ▾</button>
                     <div class="dropdown-content">
