--- a/templates/upload.html
+++ b/templates/upload.html
@@ -7,8 +7,8 @@
         <div class="col-lg-8 col-xl-6">
             <div class="card shadow-lg border-0">
                 <div class="card-body p-5">
-                    <h2 class="text-center mb-4">📤 Evaluate the gendergap/gendershift of a model</h2>
-                    <p class="text-muted text-center mb-4">Please fill in this field with the used llm.</p>
+                    <h2 class="text-center mb-4">📤 Evaluate the GenderGap/GenderShift of a model</h2>
+                    <p class="text-muted text-center mb-4">Please fill in this field with the used LLM.</p>
 
                     <form method="POST" enctype="multipart/form-data">
                         <div class="mb-4">
@@ -17,7 +17,7 @@
                         </div>
 
                         <div class="mb-4">
-                            <label for="data_type" class="form-label">Data type</label>
+                            <label for="data_type" class="form-label">Generations type</label>
                             <select class="form-select" name="data_type" id="data_type" required>
                                 <option value="neutral">Neutral</option>
                                 <option value="gendered">Gendered</option>
@@ -25,7 +25,7 @@
                         </div>
 
                         <div class="mb-4">
-                            <label for="model_name" class="form-label">Model name</label>
+                            <label for="model_name" class="form-label">Model name (be as precise as possible!)</label>
                             <input type="text" class="form-control" name="model_name" id="model_name" placeholder="ex: mistral-7b, mistral-instruct-7b" required>
                         </div>
 
