need to repair detection

--- a/templates/base.html
+++ b/templates/base.html
@@ -24,6 +24,7 @@
                     </div>
                 </div>
                 <a href="/upload">Upload</a>
+                <a href="/faqs">FAQs</a>
                 <a href="/about">About Us</a>
             </nav>
         </div>
