--- a/templates/upload.html
+++ b/templates/upload.html
@@ -9,8 +9,15 @@
                 <div class="card-body p-5">
                     <h2 class="text-center mb-4">📤 Evaluate the GenderGap/GenderShift of a model</h2>
                     <p class="text-muted text-center mb-4">Please fill in this field with the used LLM.</p>
-
                     <form method="POST" enctype="multipart/form-data">
+                        <div class="mb-4">
+                            <label class="form-label">Is your corpora already annoted ?</label>
+                            <div class="form-check">
+                                <input class="form-check-input" type="radio" name="annoted" id="annoted_yes" value="yes" required>
+                                <label class="form-check-label" for="annoted_yes">Yes</label>
+                                <input class="form-check-input" type="radio" name="annoted" id="annoted_no" value="no" required>
+                                <label class="form-check-label" for="annoted_no">No</label>
+                            </div>
                         <div class="mb-4">
                             <label for="csv_file" class="form-label">CSV file</label>
                             <input type="file" class="form-control" name="csv_file" id="csv_file" accept=".csv" required>
