--- a/templates/upload.html
+++ b/templates/upload.html
@@ -15,9 +15,12 @@
                             <div class="form-check">
                                 <input class="form-check-input" type="radio" name="annoted" id="annoted_yes" value="yes" required>
                                 <label class="form-check-label" for="annoted_yes">Yes</label>
+                            </div>
+                            <div class="form-check">
                                 <input class="form-check-input" type="radio" name="annoted" id="annoted_no" value="no" required>
                                 <label class="form-check-label" for="annoted_no">No</label>
                             </div>
+                        </div>
                         <div class="mb-4">
                             <label for="csv_file" class="form-label">CSV file</label>
                             <input type="file" class="form-control" name="csv_file" id="csv_file" accept=".csv" required>
