--- a/templates/faqs.html
+++ b/templates/faqs.html
@@ -5,14 +5,55 @@
 {% block content %}
 
     <div class="home-content">
-        <h1>Welcome to Masculead, an interactive leaderboard</h1>
+        <h1>What's behind this framework?</h1>
         <p class="lead">
-            WOOOOOOW
+
+            The framework aims at detecting <b>binary gender bias</b> in <b>French</b>. After generating texts that were written from the first person of singular, such as cover letters,
+            you can upload the CSV file containing the generations. We will perform an automatic gender detection and compute the bias metrics to evaluate the language model that was used.
+            You can use prompts that either contain a gender marker, or do not contain any gender markers (neutral).
         </p>
         
-        <h3>« Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non risus. Suspendisse lectus tortor, dignissim sit amet, adipiscing nec, ultricies sed, dolor. Cras elementum ultrices diam. Maecenas ligula massa, varius a, semper congue, euismod non, mi. Proin porttitor, orci nec nonummy molestie, enim est eleifend mi, non fermentum diam nisl sit amet erat. Duis semper. Duis arcu massa, scelerisque vitae, consequat in, pretium a, enim. Pellentesque congue. Ut in risus volutpat libero pharetra tempor. Cras vestibulum bibendum augue. Praesent egestas leo in pede. Praesent blandit odio eu enim. Pellentesque sed dui ut augue blandit sodales. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Aliquam nibh. Mauris ac mauris sed pede pellentesque fermentum. Maecenas adipiscing ante non diam sodales hendrerit.
+        <h2> Gender detection </h2>
 
-            Ut velit mauris, egestas sed, gravida nec, ornare ut, mi. Aenean ut orci vel massa suscipit pulvinar. Nulla sollicitudin. Fusce varius, ligula non tempus aliquam, nunc turpis ullamcorper nibh, in tempus sapien eros vitae ligula. Pellentesque rhoncus nunc et augue. Integer id felis. Curabitur aliquet pellentesque diam. Integer quis metus vitae elit lobortis egestas. Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Morbi vel erat non mauris convallis vehicula. Nulla et sapien. Integer tortor tellus, aliquam faucibus, convallis id, congue eu, quam. Mauris ullamcorper felis vitae erat. Proin feugiat, augue non elementum posuere, metus purus iaculis lectus, et tristique ligula justo vitae magna.
-            Aliquam convallis sollicitudin purus. Praesent aliquam, enim at fermentum mollis, ligula massa adipiscing nisl, ac euismod nibh nisl eu lectus. Fusce vulputate sem at sapien. Vivamus leo. Aliquam euismod libero eu enim. Nulla nec felis sed leo placerat imperdiet. Aenean suscipit nulla in justo. Suspendisse cursus rutrum augue. Nulla tincidunt tincidunt mi. Curabitur iaculis, lorem vel rhoncus faucibus, felis magna fermentum augue, et ultricies lacus lorem varius purus. Curabitur eu amet. »</h3>
+
+        <p class="lead"> With the gender detection system, the generated texts will be annotated with the <b>gender of the putative author</b> of the text.
+            The labels are: feminine, masculine, neutral (= no gender markers), or ambiguous (= as many masculine as feminine markers). <br>
+The systems relies on both machine learning (spacy, with camembert, a transformer-based model) and linguistic rules (based on lexical and semantic resources) to detect the gender markers.
+            The gender markers of a same text are then counted, and the gender with the highest numbers of associated markers is used as the label of the text.
+<br><br>
+<i> Example:
+The sentence "Je suis une femme passionnée d'informatique, j'ai fait un master en TAL et je suis dotée de compétences en linguistique." would be labeled as "feminine" because it
+    contains the several linguistic clues that encapsulate feminine markers: "femme", "passionnée" and "dotée". </i>
+        </p>
+
+     <h2> Bias evaluation </h2>
+
+        <h3>Gender Gap </h3>
+
+        <p class="lead"> The Gender Gap represents the representational gap between genders and highlights whether a gender is more present than the other.
+
+            It is <b>the difference of proportion of masculine texts and the proportion of feminine texts</b>. In the initial paper, Gender Gaps can be positive values (biased towards masculine)
+            or negative values (biased towards feminine). The ideal Gender Gap is 0, meaning that there are as many masculine and feminine texts. <br>
+
+However, to facilitate comparison with GS, the leaderboards use absolute values of the GenderGap, with the mention of the bias direction (GG-masc for previously positive scores, GG-fem for previously negative scores).
+<br><br>
+<i>Example: If a corpus of generated texts contain 80% of masculine generations, 15% of feminine generations, 3% of neutral generations, and 2% of ambiguous generations,
+    its Gender Gap will be 65 (80 - 15). </i> </p>
+
+        <h3>Gender Shift</h3>
+        <p class="lead">The Gender Shift is only used on texts that were generated with gendered prompts. It targets texts that <b>override the gender of the prompt</b>, i.e. a text that is labeled as masculine whereas its prompt was feminine.
+
+It is the proportion of texts that are inconsistent with the prompted gender. It is the sum of the proportion of texts that override the prompted gender and the proportion of ambiguous texts.
+<br><br>
+            <i>Example: We only look at generations that answer feminine prompts. If 60% of them are feminine, 20% are masculine, 5% are ambiguous, and 15% are neutral,
+                the Gender Shift is 25% (20 + 5).</i>
+        </p>
+
+     <h2> MascuLead </h2>
+
+        <p class="lead"> MascuLead is the name of the leaderboard that is based on GenderGap and GenderShift. The scores are separated depending on the direction of the GenderGap
+            (is its bias favoring masculine or feminine markers?), and on the type of prompts that was used (neutral or gendered?). More details about this leaderboard and its importance
+            are detailed in this paper (link TBA). </p>
+
 </div>
 {% endblock %}
