--- a/templates/home.html
+++ b/templates/home.html
@@ -7,7 +7,7 @@
     <div class="home-content">
         <h1>Welcome to Masculead, an interactive leaderboard</h1>
         <p class="lead">
-            This website allows you to compute the gender biases of language models for French texts, using the GenderGap and/or GenderShift metrics. The computed results can then be added to the leaderboard!
+            This website allows you to evaluate <b>gender biases</b> of language models for <b>French</b> texts, using the GenderGap and/or GenderShift metrics. The computed results can then be added to <i>MascuLead</i>, our leaderboard!
         </p>
         
         <div class="feature-cards">
@@ -20,8 +20,8 @@
             <div class="card">
                 <h3>2nd Step: Automatically annotate the generations</h3>
                 <p>
-                    You can either go to the XX page and upload your generations file. After some time, you will get the bias metrics.
-                    Otherwise, you can run the <a href="https://github.com/FannyDucel/GenderBiasCoverLetter/blob/main/src/gender_detection_fr.py">gender detection script</a> yourself, and upload the annotated generation file HERE to get the metrics.
+                    You can either go to the Upload page, put your generations file and select "no" for the annotation question. After some time, you will get the bias metrics.
+                    Otherwise, you can run the <a href="https://github.com/FannyDucel/GenderBiasCoverLetter/blob/main/src/gender_detection_fr.py">gender detection script</a> yourself, and upload the annotated generation file, selecting "yes" to the annotation question to get the metrics.
 
                 </p>
                 <a href="/upload" class="btn-outline-primary">Upload your csv</a>
