--- a/static/style.css
+++ b/static/style.css
@@ -635,7 +635,6 @@ p.lead {
     transition: all 0.3s ease;
 }
 
-/* Effet hover sur le bouton */
 .card .btn-outline-primary:hover {
     background-color: #3498db;
     color: white;
@@ -646,7 +645,7 @@ p.lead {
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.5); /* Fond semi-transparent */
+    background-color: rgba(0, 0, 0, 0.5); 
     display: flex;
     justify-content: center;
     align-items: center;
@@ -654,39 +653,36 @@ p.lead {
 }
 #loading-spinner {
     position: fixed;
-    top: 60px; /* Ajustez cette valeur à la hauteur de votre menu */
+    top: 0; 
     left: 0;
     width: 100%;
-    height: calc(100% - 60px); /* Ajustez cette valeur à la hauteur de votre menu */
-    background-color: rgba(255, 255, 255, 0.8); /* Fond blanc transparent */
+    height: 100%; 
+    background-color: rgba(255, 255, 255, 0.8); 
     display: flex;
     justify-content: center;
     align-items: center;
     z-index: 9999;
 }
 
-/* Style pour la carte */
 .loading-card {
-    background-color: #fff; /* Fond blanc */
+    background-color: #fff; 
     padding: 20px;
-    border-radius: 10px; /* Coins arrondis */
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* Ombre */
+    border-radius: 10px; 
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); 
     text-align: center;
-    width: 300px; /* Largeur fixe */
+    width: 300px; 
 }
 
-/* Style pour le spinner */
 .spinner {
     border: 6px solid #f3f3f3;
     border-top: 6px solid #3498db;
     border-radius: 50%;
     width: 40px;
     height: 40px;
-    margin: 0 auto 15px; /* Centré avec un espace en bas */
+    margin: 0 auto 15px; 
     animation: spin 1s linear infinite;
 }
 
-/* Animation pour le spinner */
 @keyframes spin {
     0% {
         transform: rotate(0deg);
@@ -696,7 +692,6 @@ p.lead {
     }
 }
 
-/* Style pour le texte */
 .loading-card p {
     margin: 0;
     font-size: 16px;
