--- a/static/style.css
+++ b/static/style.css
@@ -226,7 +226,7 @@ body {
     gap: 30px; 
     padding: 80px;
     max-width: 1200px; 
-    margin-left: 220px;
+    margin-left: 7%;
 }
 
 /* Style des cartes */
