--- a/templates/about.html
+++ b/templates/about.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}AboutUs{% endblock %}
+{% block title %}Masculead{% endblock %}
 
 {% block content %}
 <h1>Members of this project</h1>
