--- a/templates/home.html
+++ b/templates/home.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}Home{% endblock %}
+{% block title %}Masculead{% endblock %}
 
 {% block content %}
 <div class="home-background">
